--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/lodash": "^4.17.14",
     "@vercel/blob": "^0.27.1",
+    "lodash": "^4.17.21",
     "next": "15.1.2",
     "openai": "^4.79.1",
     "qrcode.react": "^4.2.0",
