--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@types/lodash": "^4.17.14",
+    "@types/nodemailer": "^6.4.17",
     "@vercel/blob": "^0.27.1",
     "lodash": "^4.17.21",
     "next": "15.1.2",
+    "nodemailer": "^6.10.0",
     "openai": "^4.79.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
